[project]
name = "cal"
version = "0.1.0"
description = "An intuitive terminal calendar application"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "python-dateutil>=2.8.0",
    "holidays>=0.40",
]

[project.scripts]
cal = "cal.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cal"]
